<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.giskard.testapp.DisplayDatabase">

    <EditText android:id="@+id/edit_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_student"
        android:inputType="textCapSentences"/>

    <EditText android:id="@+id/edit_grade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_grade"
        android:inputType="numberDecimal"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_addStudent"
        android:onClick="onClickAddName" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_retriveStudent"
        android:onClick="onClickRetrieveStudents" />

</LinearLayout>
